# ai-foundry-sdk-agents

./: .gitignore  README.md  pyproject.toml
src/: generate_eval_data.py
src/foundry_agents/: __init__.py  cloud_eval.py  eval.py  main.py  red_teaming.py
src/foundry_agents/config/: conversation_instructions.txt  evaluation_data.jsonl  patient_history_instructions.txt  triage_instructions.txt  user_prompt.txt
